--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
         <option value="2">認知できていない</option>
     </select><br><br>
 
+    <p>問3：スタッフのITスキル研修・教育の実施状況はいかがですか？</p>
+    <select id="q2">
+        <option value="0">定期的なIT研修＋外部セミナー参加を積極推進</option>
+        <option value="1">年1～2回程度、社内でIT関連の勉強会を実施</option>
+        <option value="2">新しいシステム導入時のみ研修を実施</option>
+    </select><br><br>
+    
     <button id="analyzeBtn">診断する</button>
 
     <!-- 結果表示 -->
